--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: .
     container_name: asistencia_arface
     restart: unless-stopped  # Si se cae o reinicia el servidor, arranca solo
+    env_file:       
+      - .env
     ports:
       - "5000:5000"
     volumes:
